--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -147,6 +147,7 @@
 \newcommand{\blue}[1]{\textcolor{Cerulean}{#1}}
 \newcommand{\cyan}[1]{\textcolor{cyan}{#1}}
 \newcommand{\yellow}[1]{\textcolor{YellowOrange}{#1}}
+\newcommand{\orange}[1]{\textcolor{Orange}{#1}}
 \newcommand{\magenta}[1]{\textcolor{magenta}{#1}}
 \newcommand{\purple}[1]{\textcolor{purple}{#1}}
 \newcommand{\rosa}[1]{\textcolor{pink}{#1}}
@@ -237,7 +238,7 @@
 
 \newenvironment{aportes}{
   \vspace{10pt}
-  \begin{minipage}{1\linewidth}
+  \begin{minipage}{0.9\linewidth}
     \tt\footnotesize
     Dale las gracias y un poco de amor \rosa{\faIcon{heart}} a los que contribuyeron!
     Gracias por tu aporte:
@@ -248,6 +249,7 @@
       \end{itemize}
     \end{multicols}
   \end{minipage}
+  \medskip
 }
 
 %=======================================================
