--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -31,6 +31,7 @@
 \usepackage{qrcode} % genera código qr
 \usepackage{xspace}% para control de espacios en macros
 \usepackage{aligned-overset}% para alinear simbolos con anotaciones sobre/abajo de ellos
+\usepackage{colortbl}
 %\usepackage{listings} % Escribir código
 
 %\usepackage{algorithm}
