Encerado y pulido del ejercicio 14 guia 1

--- a/1-guia/ejercicios-1/ej-13-1.tex
+++ b/1-guia/ejercicios-1/ej-13-1.tex
@@ -22,7 +22,7 @@
         $$
           \begin{array}{|c|c|c|c|c|c|c|c|c|}
             \hline
-            A & B & C & C^c & A - C & B - C & A \triangle B & (A \triangle B) - C & (A - C) \triangle (B - C) \\ \rowcolor{Cerulean!10}
+            A & B & C & C^c & A - C & B - C & A \triangle B & (A \triangle B) - C & (A - C) \triangle (B - C) \\\hline \rowcolor{Cerulean!10}
             V & V & V & F   & F     & F     & F             & \orange{F}          & \orange{F}                \\
             V & V & F & V   & V     & V     & F             & \orange{F}          & \orange{F}                \\\rowcolor{Cerulean!10}
             V & F & V & F   & F     & F     & V             & \orange{F}          & \orange{F}                \\
@@ -30,8 +30,7 @@
             F & V & V & F   & F     & F     & V             & \orange{F}          & \orange{F}                \\
             F & V & F & V   & F     & V     & V             & \orange{V}          & \orange{V}                \\\rowcolor{Cerulean!10}
             F & F & V & F   & F     & F     & F             & \orange{F}          & \orange{F}                \\
-            F & F & F & V   & F     & F     & F             & \orange{F}          & \orange{F}                \\\rowcolor{Cerulean!10}
-            \hline
+            F & F & F & V   & F     & F     & F             & \orange{F}          & \orange{F}                \\ \hline
           \end{array}
         $$
         Del resultado de la tabla se concluye que distribución entre la resta y una diferencia simétrica.
