--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -14,7 +14,8 @@
 \usepackage{mathtools} % Más herramientas para matemáctica
 \usepackage{amssymb} % fuentes de mathmatics
 \usepackage{array} % Para tablas y eso
-\usepackage[dvipsnames]{xcolor} % Para colorear el texto: black, blue, brown, cyan, darkgray, gray, green, lightgray, lime, magenta, olive, orange, pink, purple, red, teal, violet, white, yellow.
+\usepackage[dvipsnames,table]{xcolor} % Para colorear el texto: black, blue, brown, cyan, darkgray, gray, green, lightgray, lime, magenta, olive, orange, pink, purple, red, teal, violet, white, yellow.
+\usepackage{color} % Para colorear el texto: black, blue, brown, cyan, darkgray, gray, green, lightgray, lime, magenta, olive, orange, pink, purple, red, teal, violet, white, yellow.
 \usepackage{enumitem} % Cambiar labels y más flexibilidad para el enumerate
 \usepackage{multicol} 
 \usepackage{tikz} % para graficar
@@ -31,7 +32,7 @@
 \usepackage{qrcode} % genera código qr
 \usepackage{xspace}% para control de espacios en macros
 \usepackage{aligned-overset}% para alinear simbolos con anotaciones sobre/abajo de ellos
-\usepackage{colortbl}
+%\usepackage{colortbl}
 %\usepackage{listings} % Escribir código
 
 %\usepackage{algorithm}
