--- a/1-guia/ejercicios-1/ej-14-1.tex
+++ b/1-guia/ejercicios-1/ej-14-1.tex
@@ -21,20 +21,15 @@
         $$
           \begin{array}{|c|c|c|c|c|c|c|c|}
             \hline
-            A & B & C & B \triangle C & A \inter B & A \inter C & A \inter (B \triangle C) & (A \inter B) \triangle (A \inter C) \\
-            \hline  \hline
+            A & B & C & B \triangle C & A \inter B & A \inter C & A \inter (B \triangle C) & (A \inter B) \triangle (A \inter C) \\ \rowcolor{Cerulean!10}\hline
             V & V & V & F             & V          & V          & \magenta{F}              & \magenta{F}                         \\
-            V & V & F & V             & V          & F          & \magenta{V}              & \magenta{V}                         \\
-            \hline
+            V & V & F & V             & V          & F          & \magenta{V}              & \magenta{V}                         \\ \rowcolor{Cerulean!10}
             V & F & V & V             & F          & V          & \magenta{V}              & \magenta{V}                         \\
-            V & F & F & F             & F          & F          & \magenta{F}              & \magenta{F}                         \\
-            \hline
+            V & F & F & F             & F          & F          & \magenta{F}              & \magenta{F}                         \\ \rowcolor{Cerulean!10}
             F & V & V & F             & F          & F          & \magenta{F}              & \magenta{F}                         \\
-            F & V & F & V             & F          & F          & \magenta{F}              & \magenta{F}                         \\
-            \hline
+            F & V & F & V             & F          & F          & \magenta{F}              & \magenta{F}                         \\ \rowcolor{Cerulean!10}
             F & F & V & V             & F          & F          & \magenta{F}              & \magenta{F}                         \\
-            F & F & F & F             & F          & F          & \magenta{F}              & \magenta{F}                         \\
-            \hline
+            F & F & F & F             & F          & F          & \magenta{F}              & \magenta{F}                         \\  \hline
           \end{array}
         $$
 
@@ -61,42 +56,127 @@
         $$
 
   \item\label{ej-14-1:itemiii} Opción 1, con diagramas de Venn:\par
-    \begin{center}
-      $A \triangle B \subseteq (A \triangle C) \union (B \triangle C)$:\par
-      \begin{venndiagram3sets}[shade=blue!30!white, showframe = false,hgap=0, vgap=0, overlap = 1.1cm]
-        \fillANotB
-        \fillBNotA
-      \end{venndiagram3sets}
-      $\taa{\Tilde}{}{\subseteq}$
-      \begin{venndiagram3sets}[shade=orange!30!white, showframe = false,hgap=0, vgap=0, overlap = 1.1cm]
-        \fillANotB
-        \fillBNotC
-        \fillCNotA
-      \end{venndiagram3sets}
-    \end{center}
-  
-    Opción 2, para probar que un conjunto es subconjunto de otro me alcanza con probar que para cualquier elemento de $\universo$, si pertenece al primero entonces pertenece al segundo. \\
-    Luego, Q.P.Q. $x \in A \triangle B \entonces x \in (A \triangle C) \union (B \triangle C), \paratodo x \in \universo$ \\
-    $x \in A \triangle B \stackrel{\text{def}}{\sii} \underbrace{(x \in A \y x \notin B)}_I \o \underbrace{(x \notin A \y x \in B)}_{II}$ \\
-    $x \in (A \triangle C) \union (B \triangle C) \stackrel{\text{def}}{\sii} ((x \in A \y x \notin C) \o (x \notin A \y x \in C)) \o ((x \in B \y x \notin C) \o (x \notin B \y x \in C))$\\
-    $\sii (x \in A \y x \notin C) \o (x \notin A \y x \in C) \o (x \in B \y x \notin C) \o (x \notin B \y x \in C)$\\
+        \begin{center}
+          $A \triangle B \subseteq (A \triangle C) \union (B \triangle C)$:\par
+          \begin{venndiagram3sets}[shade=blue!30!white, showframe = false,hgap=0, vgap=0, overlap = 1.1cm]
+            \fillANotB
+            \fillBNotA
+          \end{venndiagram3sets}
+          $\taa{\Tilde}{}{\subseteq}$
+          \begin{venndiagram3sets}[shade=orange!30!white, showframe = false,hgap=0, vgap=0, overlap = 1.1cm]
+            \fillANotB
+            \fillBNotC
+            \fillCNotA
+          \end{venndiagram3sets}
+        \end{center}
 
-    Se que $x \in A \triangle B \entonces I \o II$. Separo en casos, \\
-    $\begin{cases}
-      \text{Si }I\text{ es Verdadero, }I \stackrel{\textcolor{orange}*}{\entonces} (x \in A \y x \notin C) \o (x \notin B \y x \in C) \entonces x \in (A \triangle C) \union (B \triangle C) \\
-      \text{Si }II\text{ es Verdadero, }II \stackrel{\textcolor{orange}*}{\entonces} (x \notin A \y x \in C) \o (x \in B \y x \notin C) \entonces x \in (A \triangle C) \union (B \triangle C) \\
-      \text{Si }I \y II\text{ es Verdadero, }I \y II \entonces I \stackrel{\text{idem}}{\entonces} x \in (A \triangle C) \union (B \triangle C)
-    \end{cases}$ \\
-    $\therefore x \in A \triangle B \entonces x \in (A \triangle C) \union (B \triangle C)$, como quería probar. \\
-    {\textcolor{orange}*} Observo que $(\text{Verdadero} \y p) \o (\text{Verdadero } \y \neg p)$ es una tautología.
+        Opción 2, para probar que un conjunto es subconjunto de otro,
+        me alcanza con probar que para cualquier elemento de $\universo$, si pertenece al primero entonces pertenece al segundo.
 
-  \item $(A \inter C) - B = (A \inter C) \inter B^c = (A \inter B^c) \inter C = (A-B) \inter C$
-  \item  \text{$\Rightarrow$)} Sup que $A \subseteq B$ \\
-  $A \triangle B = \overbrace{A - B}^{= \emptyset \text{ pues }A \subseteq B} \union B - A = B - A = B \inter A^c$ \\
-  $\text{$\Leftarrow$)}A \triangle B = B \inter A^c \sii A \triangle B = B - A \sii A - B \union B - A = B - A$ \\
-  $\sii A - B \subseteq B - A$, pero $A - B$ y $B - A$ son disjuntos $\entonces A - B = \emptyset \entonces A \subseteq B$
+        Luego, quiero probar que
+        $$
+          x \en A \triangle B
+          \entonces
+          x \en (A \triangle C) \union (B \triangle C), \paratodo x \en \universo
+        $$
+        Hay que acomdar las expresiones para hacer el seguimiento del elmento $x$:
+        $$
+          x \en A \triangle B
+          \Sii{def}
+          \ub{(x \en A \y x \notin B)}{I}
+          \o
+          \ub{(x \notin A \y x \en B)}{II},
+        $$
+        la otra parte:
+        $$
+          x \en (A \triangle C) \union (B \triangle C)
+          \Sii{def}
+          ((x \en A \y x \notin C)
+          \o
+          (x \notin A \y x \en C))
+          \o
+          ((x \en B \y x \notin C) \o (x \notin B \y x \en C))
+        $$
+
+        $$
+          \sii
+          (x \en A \y x \notin C)
+          \o
+          (x \notin A \y x \en C)
+          \o
+          (x \en B \y x \notin C)
+          \o
+          (x \notin B \y x \en C).
+        $$
+
+        Se que $x \in A \triangle B \entonces I \o II$. Separo en casos,
+        $$
+          \text{Si }I\text{ es Verdadero, }I \Entonces{$\llamada1$} (x \in A \y x \notin C) \o (x \notin B \y x \in C) \entonces x \in (A \triangle C) \union (B \triangle C)   \\
+        $$
+        $$
+          \text{Si }II\text{ es Verdadero, }II \Entonces{$\llamada1$} (x \notin A \y x \in C) \o (x \in B \y x \notin C) \entonces x \in (A \triangle C) \union (B \triangle C) \\
+        $$
+        $$
+          \text{Si }I \y II\text{ es Verdadero, }I \y II \entonces I
+          \Entonces{idem}
+          x \in (A \triangle C) \union (B \triangle C)
+        $$
+        $$
+          \cajaResultado{
+            \therefore x \in A \triangle B \entonces x \in (A \triangle C) \union (B \triangle C),
+          }
+        $$
+        como quería probar.
+
+        $\llamada1$ Observo que $(\text{Verdadero} \y p) \o (\text{Verdadero } \y \neg p)$ es una tautología.
+
+  \item Sale casi en forma directa:
+        $$
+          (A \inter C) - B
+          \igual{def}
+          (A \inter C) \inter B^c
+          \igual{\red{!}}
+          (A \inter B^c) \inter C
+          \igual{def}
+          (A - B) \inter C
+        $$
+        Queda así demostrada la igualdad.
+
+  \item Para probar la igualdad, hay que probar la ida y la vuelta:
+        \begin{itemize}
+          \item[($\entonces$)]
+                Por hipótesis del ejercicio:
+                $$
+                  A \subseteq B \llamada1
+                $$
+                $$
+                  A \triangle B
+                  \igual{def}
+                  A - B \union B - A
+                  \taa{\red{!!}}{\llamada1}{=}
+                  B - A = B \inter A^c
+                $$
+
+          \item[$(\Leftarrow)$]
+                La vuelta es similar:
+                $$
+                  B \inter A^c
+                  \igual{def}
+                  B - A
+                  =
+                  B - A \union \blue{\vacio}
+                  \taa{\red{!!}}{\llamada1}{=}
+                  B - A \union \blue{A - B}
+                  \igual{def}
+                  A \triangle B
+                $$
+
+                ¿Había qué hacer la ida y la vuelta? \faIcon[regular]{grin-beam-sweat}
+        \end{itemize}
+
   \item \text{$\Rightarrow$)} Sup que $A \subseteq B$. Si $x \in A \entonces x \in B$ y por contrarecíproco, si $x \notin B \entonces x \notin A \entonces B^c \subseteq A^c$ \\
-  $\text{$\Leftarrow$)}$ Es análogo.
+        $\text{$\Leftarrow$)}$ Es análogo.
+
   \item Mirando el item \ref{ej-14-1:itemi} sale solo. Dado que $X \triangle \vacio \igual{\red{!}} X$
 \end{enumerate}
 
