--- a/1-guia/ejercicios-1/ej-14-1.tex
+++ b/1-guia/ejercicios-1/ej-14-1.tex
@@ -184,6 +184,6 @@
 \begin{aportes}
   %% iconos : \github, \instagram, \tiktok, \linkedin
   %\aporte{url}{nombre icono}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{https://github.com/nad-garraz}{naD GarRaz \github}
   \item \aporte{https://github.com/MateCon}{Mateo Z \github}
 \end{aportes}
