Mejora visibilidad de tablas en guia 1

--- a/1-guia/ejercicios-1/ej-10-1.tex
+++ b/1-guia/ejercicios-1/ej-10-1.tex
@@ -21,10 +21,9 @@
         \[
           \begin{array}{|c|c|c|c|c|c|c|c|}
             \hline
-            p & q & \neg p & \neg q & p \entonces q & \neg q \entonces \neg p & \neg p \lor q & \neg(p \land \neg q) \\
-            \hline  \hline
+            p & q & \neg p & \neg q & p \entonces q & \neg q \entonces \neg p & \neg p \lor q & \neg(p \land \neg q) \\ \hline  \hline\rowcolor{Cerulean!10}
             V & V & F      & F      & V             & V                       & V             & V                    \\
-            V & F & F      & V      & F             & F                       & F             & F                    \\
+            V & F & F      & V      & F             & F                       & F             & F                    \\\rowcolor{Cerulean!10}
             F & V & V      & F      & V             & V                       & V             & V                    \\
             F & F & V      & V      & V             & V                       & V             & V                    \\
             \hline
@@ -34,9 +33,9 @@
         \[
           \begin{array}{|c|c|c|c|c|c|}
             \hline
-            p & q & \neg q & p \entonces q & \neg (p \entonces q) & p\, \y \neg q \\ \hline  \hline
+            p & q & \neg q & p \entonces q & \neg (p \entonces q) & p\, \y \neg q \\ \hline  \hline\rowcolor{Cerulean!10}
             V & V & F      & V             & F                    & F             \\
-            V & F & V      & F             & V                    & V             \\
+            V & F & V      & F             & V                    & V             \\\rowcolor{Cerulean!10}
             F & V & F      & V             & F                    & F             \\
             F & F & V      & V             & F                    & F             \\ \hline
           \end{array}
