--- a/1-guia/teoria-1/teoria-1.tex
+++ b/1-guia/teoria-1/teoria-1.tex
@@ -8,7 +8,7 @@
           \partes(A) = \set{B : B \subseteq A} \text{ o también } B \en \partes{A} \sisolosi B \subseteq A.
         $$
         Por ejemplo: Si $A = \set{1,2,3}$, $\partes(A) = \set{\vacio, \set{1},\set{2},\set{3},\set{1,2}, \set{1,3}, \set{2,3},\set{1,2,3}}$
-\item \textit{ Las uniones  $(\union)$ e intersecciones $(\inter)$:}
+  \item \textit{ Las uniones  $(\union)$ e intersecciones $(\inter)$:}
         \begin{itemize}[label={\tiny\faIcon{meh}}]
           \item $A \union B = \set{x \en U : x \en A \otext x \en B}$
           \item $A \inter B = \set{x \en U : x \en A \ytext x \en B}$
@@ -104,10 +104,10 @@
         \[
           \begin{array}{|c|c|c|c|c|c|c|c|}
             \hline
-            x \en A & x \en B & x \en A^c & x \en A \inter B & x \en A \union B & x \en \subconjuntoYequivalente & x \en A \triangle B & A - B \\
+            x \en A & x \en B & x \en A^c & x \en A \inter B & x \en A \union B & x \en \subconjuntoYequivalente & x \en A \triangle B & A - B \\\rowcolor{Cerulean!10}
             \hline
             V       & V       & F         & V                & V                & V                              & F                   & F     \\
-            V       & F       & F         & F                & V                & F                              & V                   & V     \\
+            V       & F       & F         & F                & V                & F                              & V                   & V     \\\rowcolor{Cerulean!10}
             F       & V       & V         & F                & V                & V                              & V                   & F     \\
             F       & F       & V         & F                & F                & V                              & F                   & F     \\
             \hline
