referencia en ejercicio 26 guia 1

--- a/1-guia/ejercicios-1/ej-13-1.tex
+++ b/1-guia/ejercicios-1/ej-13-1.tex
@@ -84,7 +84,7 @@
           }
         $$
 
-  \item ¡Es verdadera!
+  \item\label{ej-13-1:itemiv} ¡Es verdadera!
         \begin{itemize}
           \item[$\entonces)$]
                 $$
