--- a/1-guia/ejercicios-1/ej-26-1.tex
+++ b/1-guia/ejercicios-1/ej-26-1.tex
@@ -1,13 +1,15 @@
 \begin{enunciado}{\ejercicio}
   Sean $P = \partes(\set{1,2,3,4,5,6,7,8,9,10})$
   el conjunto de partes de $\set{1,\dots, 10}$ y $\relacion$ la relación en $P$ definida por:
+
   $$
     A \relacion B \sisolosi (A \triangle B) \inter \set{1,2,3} = \vacio
   $$
-  \begin{enumerate}[label=\roman*)]
 
+  \begin{enumerate}[label=\roman*)]
     \item  Probar que $\relacion$ es una relación de equivalencia y decidir si es antisimétrica
           (\textit{\underline{Sugerencia:}} usar adecuadamente el ejercicio \textbf{14\ref{ej-14-1:itemiii}})).
+
     \item Hallar la clase de equivalencia de $A = \set{1,2,3}$.
   \end{enumerate}
 \end{enunciado}
@@ -80,7 +82,7 @@
           \set{1,2,3} \triangle (X \inter \set{1,2,3}) = \vacio,
         $$
         que, en mi opinión, está más fácil de leer. Para que una diferencia simétrica entre 2 conjuntos
-        resulte en vacío, necesito que los conjuntos sean iguales. Por lo tanto quiero los conjuntos $X$ tales que:
+        resulte en vacío, necesito que los conjuntos sean iguales (mirá \refEjercicio{ej:13}\ref{ej-13-1:itemiv}). Por lo tanto quiero los conjuntos $X$ tales que:
         $$
           X \inter \set{1,2,3} = \set{1,2,3}.
         $$
@@ -94,9 +96,6 @@
 
 % Contribuciones
 \begin{aportes}
-  %% iconos : \github, \instagram, \tiktok, \linkedin
-  %\aporte{url}{nombre icono}
-
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{https://github.com/nad-garraz}{naD GarRaz \github}
   \item \aporte{https://github.com/gusvianadev}{Gus Viana \github}
 \end{aportes}
