Start ej 36 guia 1

--- a/1-guia/ejercicios-1-extra/ej-extra-3-1.tex
+++ b/1-guia/ejercicios-1-extra/ej-extra-3-1.tex
@@ -152,3 +152,7 @@ $$
 
         Se concluye que hay un total de $\frac{46!}{42!}  + 4!$ funciones $g \en \F / f \relacion g$ \Tilde
 \end{enumerate}
+
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
