--- a/1-guia/ejercicios-1-extra/ej-extra-4-1.tex
+++ b/1-guia/ejercicios-1-extra/ej-extra-4-1.tex
@@ -147,3 +147,7 @@
         La relación es \textit{transitiva}.\par
         Como la relación resultó ser \textit{reflexiva, simétrica y transitiva,} entonces es de equivalencia. Fin.
 \end{enumerate}
+
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
