--- a/1-guia/ejercicios-1-extra/ej-extra-7-1.tex
+++ b/1-guia/ejercicios-1-extra/ej-extra-7-1.tex
@@ -50,7 +50,7 @@
         $$
         De ser antisimétrica debería ocurrir que
         $$
-          B \norelacion A \text{  para  } B \distinto A.
+          A \relacion B \entonces B \norelacion A \text{  para  } B \distinto A.
         $$
         Veamos por ejemplo qué pasa con $A = \set{1}$ y $B = \set{2}$, donde $A \distinto B$:
         $$
