--- a/1-guia/ejercicios-1/ej-36-1.tex
+++ b/1-guia/ejercicios-1/ej-36-1.tex
@@ -1,3 +1,7 @@
 \begin{enunciado}{\ejercicio}
-\hacer
+        Sea $f: \set{1,2,3,4} \to \set{1,2,3,4}$ una función.
+        Consideremos el conjunto de \textbf{todas} las funciones de $\set{1,2,3,4}$ en $\set{1,2,3,4,5,6,7,8}$, es decir,
+        $$
+        \F = \set{f: \set{1,2,3,4} \to \set{1,2,3,4,5,6,7,8}}
+        $$
 \end{enunciado}
