--- a/1-guia/ejercicios-1-extra/ej-extra-2-1.tex
+++ b/1-guia/ejercicios-1-extra/ej-extra-2-1.tex
@@ -1,44 +1,50 @@
 \begin{enunciado}{\ejExtra}
-Probar la propiedad $(A \inter B)^c = A^c \union B^c$.
+  \textbf{Este no es de parcial, pero está por razones históricas {\small\faIcon[regular]{grin-beam-sweat}}:}
+
+  Probar la propiedad $(A \inter B)^c = A^c \union B^c$.
 \end{enunciado}
 
 Tengo que hacer una doble inclusión
 $\to \begin{cases}
-		1) & (A \inter B)^c \subseteq A^c \union B^c \\
-		2) & A^c \union B^c \subseteq (A \inter B)^c
-	\end{cases}
+    1) & (A \inter B)^c \subseteq A^c \union B^c \\
+    2) & A^c \union B^c \subseteq (A \inter B)^c
+  \end{cases}
 $
 \begin{enumerate}[label=\arabic*)]
-	\item Prueba directa: Si $x \en (A \inter B)^c \entonces x \en A^c \union B^c $\\
-	      Por hipótesis $x \en (A \inter B)^c  \Sii{def}  x \notin A \o x \notin B
-		      \entonces x \en A^c \o x \en B^c \entonces x \en A^c \union B^c$\\
-	      $\begin{array}{|c|c|c|c|}
-			      \hline
-			      A & B & A^c \union B^c & (A \inter B)^c \\ \hline
-			      V & V & F              & F              \\
-			      V & F & V              & V              \\
-			      F & V & V              & V              \\
-			      F & F & V              & V              \\ \hline
-		      \end{array}
-	      $
+  \item Prueba directa: Si $x \en (A \inter B)^c \entonces x \en A^c \union B^c $\\
+        Por hipótesis $x \en (A \inter B)^c  \Sii{def}  x \notin A \o x \notin B
+          \entonces x \en A^c \o x \en B^c \entonces x \en A^c \union B^c$\\
+        $$\begin{array}{|c|c|c|c|}
+            \hline
+            A & B & A^c \union B^c & (A \inter B)^c \\ \hline\rowcolor{Cerulean!10}
+            V & V & \orange{F}     & \orange{F}     \\
+            V & F & \orange{V}     & \orange{V}     \\\rowcolor{Cerulean!10}
+            F & V & \orange{V}     & \orange{V}     \\
+            F & F & \orange{V}     & \orange{V}     \\ \hline
+          \end{array}
+        $$
 
-	      \blue{Uso la tabla para ver la definición $x \en (A \inter B)^c  \Sii{def}  x \notin A \o x \notin B$}
+        Uso la tabla para ver la definición $x \en (A \inter B)^c  \Sii{def}  x \notin A \o x \notin B$
 
-	\item Pruebo por absurdo. Si $\paratodo x \en A^c \union B^c \entonces x \en (A \inter B)^c$\\
-	      \green{Supongo} que $ x \notin (A \inter B)^c  \Sii{def}  x \en (A \inter B) \flecha{por}[hipótesis] x \en A^c \union B^c \to
-		      \llaves{c}{
-			      x \notin A\\
-			      \o \\
-			      x \notin B\\
-		      }$, por lo que $x \notin A \union B \entonces x \notin A \inter B$ contradiciendo el \green{supuesto}, absurdo. Debe ocurrir que $x \en (A \inter B)^c   $
+  \item Pruebo por absurdo. Si $\paratodo x \en A^c \union B^c \entonces x \en (A \inter B)^c$\\
+        \green{Supongo} que $ x \notin (A \inter B)^c  \Sii{def}  x \en (A \inter B) \flecha{por}[hipótesis] x \en A^c \union B^c \to
+          \llaves{c}{
+            x \notin A\\
+            \o \\
+            x \notin B\\
+          }$, por lo que $x \notin A \union B \entonces x \notin A \inter B$ contradiciendo el \green{supuesto}, absurdo. Debe ocurrir que $x \en (A \inter B)^c   $
 
-	      $\begin{array}{|c|c|c|c|c|}
-			      \hline
-			      A & B & A \inter B & (A \union B) & (A \inter B) \subseteq (A \union B) \\ \hline
-			      V & V & V          & V            & V                                   \\
-			      V & F & F          & V            & V                                   \\
-			      F & V & F          & V            & V                                   \\
-			      F & F & F          & F            & V                                   \\ \hline
-		      \end{array}
-	      $
+        $$\begin{array}{|c|c|c|c|c|}
+            \hline
+            A & B & A \inter B & (A \union B) & (A \inter B) \subseteq (A \union B) \\ \hline\rowcolor{Cerulean!10}
+            V & V & V          & V            & V                                   \\
+            V & F & F          & V            & V                                   \\\rowcolor{Cerulean!10}
+            F & V & F          & V            & V                                   \\
+            F & F & F          & F            & V                                   \\ \hline
+          \end{array}
+        $$
 \end{enumerate}
+
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
